--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
   <section>
     <div class="profile">
-      <img src="https://via.placeholder.com/120" alt="Your Photo">
+      <img src="assets/avatar.png" alt="My Avatar" style="width:150px; border-radius:50%;">
       <div>
         <h2>About Me</h2>
         <p>
@@ -159,3 +159,4 @@
 
 </body>
 </html>
+
