--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
 
   <header>
-    <h1>Hi, I'm [Your Name]</h1>
+    <h1>Hi, I'm Connor</h1>
     <p>Google Apps Script Developer | Automations & Productivity Tools</p>
   </header>
 
@@ -159,4 +159,5 @@
 
 </body>
 </html>
+
 
